--- a/.github/workflows/build-and-deploy-public.yml
+++ b/.github/workflows/build-and-deploy-public.yml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
       - name: Install dependencies
         run: yarn
       - name: Build
