--- a/.github/workflows/build-and-deploy-public-daily.yml
+++ b/.github/workflows/build-and-deploy-public-daily.yml
@@ -12,8 +12,9 @@ jobs:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GH_PAT }}
           ref: main
       - name: Install dependencies
         run: yarn
@@ -34,8 +35,9 @@ jobs:
     needs: generate
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GH_PAT }}
           ref: main
       - name: Setup Pages
         uses: actions/configure-pages@v5
