--- a/.github/workflows/build-and-deploy-public.yml
+++ b/.github/workflows/build-and-deploy-public.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
       - name: Install dependencies
         run: yarn
       - name: Build
@@ -28,6 +30,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
       - name: Install dependencies
         run: yarn
       - name: Build
