--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@phrygia/maimai",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
